# rust-bindgen

./: .gitattributes  .gitignore  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Changelog.md  ISSUE_TEMPLATE.md  Makefile  README.md  README.txt  allowlisting.html  appveyor.yml  asd.fish  ast.rs  bindgen.rc  bindgen.rs  bisect.sh  blacklisting.html  blocklisting.html  build.rs  clang.rs  clangll.rs  clippy.toml  code-formatting.html  command-line-usage.html  cpp.html  customizing-generated-bindings.html  dist-workspace.toml  faq.html  gen.rs  highlight.css  highlight.js  index.html  introduction.html  lib.rs  library-usage.html  macro.rs  main.rs  (+39 more)
bindgen/: .lib.rs.swp  Cargo.toml  build.rs  callbacks.rs  clang.rs  deps.rs  diagnostics.rs  extra_assertions.rs  features.rs  function_types.rs  lib.rs  log_stubs.rs  options.rs  regex_set.rs  renamer.rs  time.rs
bindgen-cli/: Cargo.toml  main.rs  options.rs
bindgen-integration/: .gitattributes  Cargo.toml  build.rs
bindgen-integration/cpp/: Test.cc  Test.h
bindgen-integration/src/: lib.rs
bindgen-tests/: Cargo.toml  build.rs
bindgen-tests/tests/: stylo_sanity.rs  test-one.sh  tests.rs
bindgen-tests/tests/expectations/: Cargo.toml  build.rs  rustfmt.toml
bindgen-tests/tests/expectations/bindings/: allowlist-file.rs  allowlisted_item_references_no_copy.rs  anon_union.rs  anonymous-template-types.rs  arg_keyword.rs  attribute_warn_unused_result_pre_1_27.rs  bindgen-union-inside-namespace.rs  bitfield-method-same-name.rs  c-unwind-abi-override-nightly.rs  class.rs  class_1_0.rs  class_with_typedef.rs  const_array.rs  const_enum_unnamed.rs  constructor-tp.rs  decl_ptr_to_array.rs  derive-clone_1_0.rs  derive-debug-bitfield.rs  derive-hash-struct-with-incomplete-array.rs  derive-partialeq-bitfield.rs  disable-untagged-union.rs  divide-by-zero-in-struct-layout.rs  do-not-derive-copy.rs  dupe-enum-variant-in-namespace.rs  duplicated-namespaces-definitions.rs  dynamic_loading_attributes.rs  dynamic_loading_template.rs  dynamic_loading_with_allowlist.rs  enum-doc-bitfield.rs  enum.rs  enum_negative.rs  eval-value-dependent.rs  forward_declared_struct.rs  func_ptr_return_type.rs  (+50 more)
bindgen-tests/tests/headers/: 3119_overlapping_alias_comment.h  abi-override.h  abi_variadic_function.hpp  alias_comments.h  allow-item-callback.h  allowlist-namespaces.hpp  allowlist_basic.hpp  allowlist_item.h  allowlist_warnings.h  allowlisted-item-references-no-hash.hpp  allowlisted_item_references_no_copy.hpp  anon-fields-prefix.h  anon_enum.hpp  anon_enum_allowlist.h  anon_enum_allowlist_item.h  anon_enum_blocklist.h  anon_union_1_0.hpp  anonymous-template-types.hpp  arg_keyword.hpp  atomic-constant.h  attribute-custom-cli.h  attribute-custom.h  attribute_warn_unused_result.hpp  attribute_warn_unused_result_no_attribute_detection.hpp  bindgen-union-inside-namespace.hpp  bitfield-32bit-overflow.h  bitfield-accessor-name-conflict.h  bitfield-enum-basic.hpp  bitfield-enum-repr-c.hpp  bitfield-enum-repr-transparent.hpp  bitfield-global-enum-basic.hpp  bitfield-large.hpp  bitfield-linux-32.hpp  bitfield-template.hpp  bitfield_align.h  bitfield_comma_separated_derives.h  bitfield_pack_offset.h  bitfield_pragma_packed.h  bitfield_union_derives.h  block-item-callback.h  (+419 more)
bindgen-tests/tests/macro_fallback_test_headers/: another_header.h  one_header.h
bindgen-tests/tests/parse_callbacks/: mod.rs  unused_template_param.hpp  unused_template_param.rs
bindgen-tests/tests/quickchecking/: Cargo.toml  README.md
bindgen/codegen/: bitfield_unit.rs  bitfield_unit_const.rs  bitfield_unit_impl.rs  bitfield_unit_raw_ref_macros.rs  bitfield_unit_tests.rs  dyngen.rs  error.rs  helpers.rs  impl_debug.rs  impl_partialeq.rs  macro_def.rs  mod.rs  serialize.rs  struct_layout.rs
bindgen/codegen/postprocessing/: merge_cfg_attributes.rs  merge_extern_blocks.rs  merge_impl_blocks.rs  mod.rs  non_null_fn_ptr.rs  remove_alias.rs  sort_semantically.rs
bindgen/csmith-fuzzing/: csmith.h  driver.py  predicate.py
bindgen/ir/: annotations.rs  comment.rs  comp.rs  context.rs  derive.rs  dot.rs  enum_ty.rs  func_macro.rs  function.rs  int.rs  item.rs  item_kind.rs  layout.rs  macro_def.rs  mod.rs  module.rs  objc.rs  serialize.rs  template.rs  traversal.rs  ty.rs  var.rs
bindgen/ir/analysis/: derive.rs  has_destructor.rs  has_float.rs  has_type_param_in_array.rs  has_vtable.rs  mod.rs  never_by_value.rs  sizedness.rs  template_params.rs
bindgen/options/: as_args.rs  cli.rs  helpers.rs  mod.rs
bindgen/src/: main.rs  options.rs
bindgen_plugin/: Cargo.toml
bindgen_plugin/src/: bgmacro.rs  lib.rs
latex_to_symbolic/: Cargo.toml  build.rs  convert.py  modbind.rs  wrapper.cpp  wrapper.hpp
latex_to_symbolic/src/: charit.rs  charstring.rs  giwrap.rs  lib.rs
libbindgen/: Cargo.toml  README.md  build.rs
libbindgen/src/: chooser.rs  clang.rs  clangll.rs  lib.rs  regex_set.rs
libbindgen/src/codegen/: helpers.rs  mod.rs
libbindgen/src/ir/: annotations.rs  comp.rs  context.rs  enum_ty.rs  function.rs  int.rs  item.rs  layout.rs  mod.rs  module.rs  ty.rs  var.rs
libbindgen/tests/: tests.rs
libbindgen/tests/expectations/: Cargo.toml
libbindgen/tests/headers/: anon_enum.hpp  auto.hpp  constant-evaluate.h  constify-enum.h  constructor-tp.hpp  empty_template_param_name.hpp  replace_template_alias.hpp  template_function_with_auto.hpp  whitelist-namespaces-basic.hpp
plugin/: Cargo.toml
plugin/src/: bgmacro.rs
safe_wrappers/: Cargo.toml  a.out  bug.cpp  build.rs  creduce.sh  example.cpp  example.s  generated.cpp  libout.rlib  libout.rmeta  out.d  out.rs  out.txt  out1.txt  out2.txt  reduce.sh  report  temp.cpp  temp.rs  test.sh
safe_wrappers/creduce_bug_000/: PASS_BUG_INFO.TXT  example.cpp
safe_wrappers/src/: main.rs
src/clang/: CMakeLists.txt  ClangAST.cpp  ClangAST.hpp  clang_interface.cpp  clang_interface.hpp  clang_interface.rs  clang_interface_impl.hpp  clangtool.rs  libclang_compat.cpp
tests/quickchecking/: Cargo.toml  README.md
tests/quickchecking/src/: bin.rs  fuzzers.rs  lib.rs
tests/quickchecking/tests/: fuzzed-c-headers.rs
(+2923 files in other folders)
