[package]
name = "bindgen-integration"
description = "A package to test various bindgen features"
version = "0.1.0"
authors = ["Emilio Cobos Álvarez <emilio@crisal.io>"]
publish = false
build = "build.rs"

[build-dependencies]
bindgen = { path = "../bindgen", features = ["experimental"] }
cc = "1.0"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }

[features]
static = ["bindgen/static"]
runtime = ["bindgen/runtime"]

__testing_only_extra_assertions = ["bindgen/__testing_only_extra_assertions"]
__testing_only_libclang_9 = ["bindgen/__testing_only_libclang_9"]
__testing_only_libclang_16 = ["bindgen/__testing_only_libclang_16"]
