lints.workspace = true

[package]
name = "bindgen-integration"
description = "A package to test various bindgen features"
version = "0.1.0"
authors = ["Emilio Cobos Ãlvarez <emilio@crisal.io>"]
publish = false
build = "build.rs"
rust-version.workspace = true
edition.workspace = true

[build-dependencies]
bindgen = { workspace = true, default-features = true, features = ["experimental"] }
cc.workspace = true

[features]
static = ["bindgen/static"]
runtime = ["bindgen/runtime"]

__testing_only_extra_assertions = ["bindgen/__testing_only_extra_assertions"]
__testing_only_libclang_9 = ["bindgen/__testing_only_libclang_9"]
__testing_only_libclang_16 = ["bindgen/__testing_only_libclang_16"]
