[package]
name = "bindgen-tests"
edition = "2018"
version = "0.1.0"
publish = false

[dev-dependencies]
bindgen = { path = "../bindgen", features = ["__cli", "experimental"] }
owo-colors = "3.5.0"
prettyplease = { version = "0.2.7", features = ["verbatim"] }
similar = { version = "2.2.1", features = ["inline"] }
tempfile = "3"

proc-macro2.workspace = true
shlex.workspace = true
syn.workspace = true

[features]
logging = ["bindgen/logging"]
static = ["bindgen/static"]
runtime = ["bindgen/runtime"]

__testing_only_extra_assertions = ["bindgen/__testing_only_extra_assertions"]
__testing_only_libclang_9 = ["bindgen/__testing_only_libclang_9"]
__testing_only_libclang_16 = ["bindgen/__testing_only_libclang_16"]
