[package]
name = "bindgen"

build = "build.rs"
# If you change this, also update README.md and msrv in .github/workflows/bindgen.yml
rust-version = "1.60.0"

authors.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
version.workspace = true
edition.workspace = true

[lib]
name = "bindgen"
path = "lib.rs"

[dependencies]
bitflags = "1.0.3"
cexpr = "0.6"
clang-sys = { version = "1", features = ["clang_6_0"] }
lazycell = "1"
lazy_static = "1"
peeking_take_while = "0.1.2"
quote = { version = "1", default-features = false }
syn = { version = "1.0.99", features = ["full", "extra-traits", "visit-mut"]}
regex = { version = "1.5", default-features = false , features = ["std", "unicode"] }
which = { version = "4.2.1", optional = true, default-features = false }
shlex = "1"
rustc-hash = "1.0.1"
proc-macro2 = { version = "1", default-features = false }
log = { version = "0.4", optional = true }

[features]
default = ["logging", "runtime", "which-rustfmt"]
logging = ["log"]
static = ["clang-sys/static"]
runtime = ["clang-sys/runtime"]
# Dynamically discover a `rustfmt` binary using the `which` crate
which-rustfmt = ["which"]
cli = []
experimental = []

# These features only exist for CI testing -- don't use them if you're not hacking
# on bindgen!
testing_only_extra_assertions = []
testing_only_libclang_9 = []
testing_only_libclang_5 = []
