[package]

name = "bindgen_plugin"
version = "0.14.0"
description = "A binding generator for Rust - compiler plugin"
authors = ["Jyun-Yan You <jyyou.tw@gmail.com>"]
license = "BSD-3-Clause"

[dependencies.bindgen]
version = "*"
path = ".."

[features]
static = []

[lib]

name = "bindgen_plugin"
path = "src/lib.rs"
plugin = true
