[package]
name = "latex_to_symbolic"
version = "0.1.0"
authors = ["Volker Weißmann <volker.weissmann@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"

[build-dependencies]
bindgen = { path = ".." }