[package]
authors = [
  "Jyun-Yan You <jyyou.tw@gmail.com>",
  "Emilio Cobos Álvarez <ecoal95@gmail.com>",
  "The Servo project developers",
]
build = "build.rs"
description = "A binding generator for Rust"
homepage = "https://github.com/servo/rust-bindgen"
keywords = ["bindings", "ffi", "code-generation"]
license = "BSD-3-Clause"
name = "libbindgen"
readme = "README.md"
repository = "https://github.com/servo/rust-bindgen"
version = "0.1.2"
workspace = ".."

[dev-dependencies]
diff = "0.1"
clap = "2"
shlex = "0.1"

[build-dependencies]
quasi_codegen = "0.26"

[dependencies]
cfg-if = "0.1.0"
clang-sys = "0.11.1"
lazy_static = "0.1.*"
libc = "0.2"
rustc-serialize = "0.3.19"
syntex_syntax = "0.50"
regex = "0.1"
cexpr = "0.2"

[dependencies.aster]
features = ["with-syntex"]
version = "0.34"

[dependencies.env_logger]
optional = true
version = "0.3"

[dependencies.log]
optional = true
version = "0.3"

[dependencies.quasi]
features = ["with-syntex"]
version = "0.26"

[features]
default = ["logging"]
llvm_stable = []
logging = ["env_logger", "log"]
static = []
# This feature only exists for CI -- don't use it!
docs_ = []
