[package]

name = "rust-bindgen-plugin"
version = "0.13.0"
authors = ["Jyun-Yan You <jyyou.tw@gmail.com>"]
license = "BSD-3-Clause"

[dependencies.log]
git = "https://github.com/rust-lang/log.git"

[dependencies.rust-bindgen]
path = ".."

[features]
static = []

[lib]

name = "bindgen_plugin"
path = "src/lib.rs"
plugin = true
