[package]
name = "safe_wrappers"
version = "0.1.0"
authors = ["Volker Weißmann <volker.weissmann@gmx.de>"]
description = "Test bindgen: We generate bindings for example.cpp, then we compile example.cpp and link it to this crate. This should allow us to call functions in example.cpp from main.rs."
edition = "2018"

[dependencies]
memoffset = "0.5.4"
pin-utils = "*"

[build-dependencies]
bindgen = { path = ".." }
