[package]
name = "quickchecking"
description = "Bindgen property tests with quickcheck. Generate random valid C code and pass it to the csmith/predicate.py script"
version = "0.1.0"
authors = ["Shea Newton <sheanewt@gmail.com>"]

[lib]
name = "quickchecking"
path = "src/lib.rs"

[[bin]]
name = "quickchecking"
path = "src/bin.rs"

[dependencies]
clap = "2.28"
lazy_static = "1.0"
quickcheck = "0.4"
rand = "0.3"
tempdir = "0.3"

[features]
# No features by default.
default = []

# Enable the generation of code that allows for zero sized arrays as struct
# fields. Until issues #684 and #1153 are resolved this can result in failing tests. 
zero-sized-arrays = [] 

# Enable the generation of code that allows for long double types as struct
# fields. Until issue #550 is resolved this can result in failing tests.
long-doubles = []
