[package]
name = "tests_expectations"
description = "bindgen results when ran on ../headers/*"
version = "0.0.0"
authors = [
  "Jyun-Yan You <jyyou.tw@gmail.com>",
  "Emilio Cobos Álvarez <emilio@crisal.io>",
  "The Servo project developers",
]
edition = "2021"
publish = false

[dependencies]
block = "0.1"
libloading = "0.7"
objc = "0.2"

[lints.rust]
### FIXME: these might need to be fixed,
###   esp the calling convention, because it is a hard error now
# deprecated = "allow"
# invalid-value = "allow"
# unsupported_calling_conventions = "allow"
dead_code = "allow"
non-snake-case = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"
unexpected-cfgs = "allow"

[lints.clippy]
disallowed-names = "allow"
manual-c-str-literals = "allow"
missing-safety-doc = "allow"
op-ref = "allow"
ptr-offset-with-cast = "allow"
semicolon_if_nothing_returned = "allow"
too-many-arguments = "allow"
transmute-int-to-bool = "allow"
unnecessary-cast = "allow"
useless-transmute  = "allow"
