[package]
name = "tests_expectations"
description = "bindgen results when ran on ../headers/*"
version = "0.0.0"
authors = [
  "Jyun-Yan You <jyyou.tw@gmail.com>",
  "Emilio Cobos Álvarez <emilio@crisal.io>",
  "The Servo project developers",
]
publish = false
rust-version.workspace = true
edition.workspace = true

[dependencies]
block.workspace = true
libloading.workspace = true
objc.workspace = true

[lints.rust]
### FIXME: these might need to be fixed,
###   esp the calling convention, because it is a hard error now
# deprecated = "allow"
# invalid-value = "allow"
# unsupported_calling_conventions = "allow"
non-snake-case = "allow"
unexpected-cfgs = "allow"

[lints.clippy]
disallowed-names = "allow"
manual-c-str-literals = "allow"
missing-safety-doc = "allow"
op-ref = "allow"
ptr-offset-with-cast = "allow"
too-many-arguments = "allow"
transmute-int-to-bool = "allow"
unnecessary-cast = "allow"
useless-transmute  = "allow"
